integerated file and initial flags detection

--- a/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
+++ b/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -391,19 +391,19 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 77
     }
    ],
    "source": [
-    "img= cv2.imread(\"09.PNG\") \n",
+    "img= cv2.imread(\"03.PNG\") \n",
     "countourImg=np.copy(img)\n",
     "gray_img=cv2.cvtColor(img,cv2.COLOR_BGR2GRAY) \n",
-    "IlluminatedImage=applyPoison(gray_img,0.1,0.1)\n",
-    "IlluminatedImage=IlluminatedImage.astype(np.uint8)\n",
-    "smoothedImage=smooth(IlluminatedImage)\n",
-    "t =threshold_otsu(smoothedImage)\n",
-    "BinarizedImage=np.where(smoothedImage>t,1,0)\n",
-    "# BinarizedImage=feng_threshold(IlluminatedImage)\n",
+    "# IlluminatedImage=applyPoison(gray_img,0.1,0.1)\n",
+    "# IlluminatedImage=IlluminatedImage.astype(np.uint8)\n",
+    "#smoothedImage=smooth(gray_img)\n",
+    "# t =threshold_otsu(smoothedImage)\n",
+    "# BinarizedImage=np.where(smoothedImage>t,1,0)\n",
+    "BinarizedImage=feng_threshold(gray_img)\n",
     "BinarizedImage=1-BinarizedImage\n",
     "RotatedImage=deskew(BinarizedImage)\n",
     "#correctedPrespective=prespectiveCorrection(RotatedImage)\n",
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,32 +426,19 @@
     "    proj = np.sum(img,1)\n",
     "    maxProjection = np.max(proj) \n",
     "    result = np.zeros(img.shape) \n",
-    "    width=img.shape[1] \n",
     "    # Draw a line for each row \n",
     "    for row in range(img.shape[0]):\n",
     "        result[row,0:int(proj[row])]=1  \n",
     "    result=1-result\n",
+    "    cv2.imwrite(\"result.png\",result*255)\n",
     "    return maxProjection,result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "IndexError",
-     "evalue": "index 352 is out of bounds for axis 0 with size 352",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-820bd40e3dba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0;31m#estimate max staff space\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 85\u001b[0;31m \u001b[0mmaxProjection\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrowProjection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     86\u001b[0m \u001b[0mstaffWidth\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpeaksMids\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcalcStaffPos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmaxProjection\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[0mmaxSpace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmaxStaffSpace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpeaksMids\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstaffWidth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-10-fb19e3c06468>\u001b[0m in \u001b[0;36mrowProjection\u001b[0;34m(img)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;31m# Draw a line for each row\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproj\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0mresult\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmaxProjection\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 352 is out of bounds for axis 0 with size 352"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#estimate staff position \n",
     "def calcStaffPos(rowHist,maxProjection,thr):\n",
@@ -559,9 +546,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[4 4 4 4 4] [ 57  89 121 153 184]\n"
+     ]
+    }
+   ],
    "source": [
     "#loop in array of images and remove staff from each\n",
     "def removeStaffRow(imgOriginal,midPoint,curWidth):\n",
@@ -576,15 +571,16 @@
     "#remove staff from array of imgs of segments\n",
     "imgsStaffRemoved=[]\n",
     "for simg in imgSegments:\n",
+    "    simg=1-simg\n",
     "    maxProjection,result=rowProjection(simg)\n",
     "    staffWidth,peaksMids=calcStaffPos(result,maxProjection,0.85)\n",
-    "    simg=1-simg\n",
-    "    ST=np.ones((1,3))\n",
-    "    simg=cv2.dilate(simg,ST)\n",
+    "    print(staffWidth,peaksMids)\n",
+    "    # ST=np.ones((1,3))\n",
+    "    # simg=cv2.dilate(simg,ST)\n",
     "    for i in range(len(peaksMids)):\n",
     "        simg=removeStaffRow(simg,peaksMids[i],staffWidth[i])\n",
-    "    ST=np.ones((2,1))\n",
-    "    simg=cv2.dilate(simg,ST)\n",
+    "    # ST=np.ones((2,1))\n",
+    "    # simg=cv2.dilate(simg,ST)\n",
     "    simg=1-simg\n",
     "    imgsStaffRemoved.append(simg)\n",
     "\n",
