--- a/detection/cornerDetection.ipynb
+++ b/detection/cornerDetection.ipynb
@@ -24,18 +24,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "from skimage import img_as_float\n",
     "import cv2\n",
     "import numpy as np \n",
-    "from skimage.feature import corner_harris, corner_subpix, corner_peaks\n",
     "from skimage.morphology import skeletonize, thin\n",
     "from math import pi,atan\n",
     "\n",
-    "# create a 3channel image \n",
     "# if color is white => symbol , black => background\n",
     "# another matrix => visited pixels\n",
     "\n",
@@ -52,16 +50,17 @@
     "    w,h=visited.shape\n",
     "    if(visited[y][x]):\n",
     "        return\n",
-    "    count=0 \n",
     "    nextX=x\n",
     "    nextY=y\n",
     "    path=[]\n",
     "    path.append([nextX,nextY])\n",
+    "    count=0\n",
     "    while(nextX+1 != w and nextY+1 != h):\n",
     "        #check right pixel\n",
     "        if(skeleton[nextY][nextX+1]):\n",
     "            nextX=nextX+1\n",
     "            path.append([nextX,nextY])\n",
+    "            #count+=1\n",
     "        #check right down\n",
     "        elif(skeleton[nextY+1][nextX+1]):\n",
     "            nextX=nextX+1\n",
@@ -75,7 +74,7 @@
     "        #if none exit loop\n",
     "        else:\n",
     "            break\n",
-    "    if(len(path)>=6):\n",
+    "    if(len(path)>5):\n",
     "        isCorner.append([x,y])\n",
     "        for i in path:\n",
     "            pX=i[0]\n",
@@ -115,30 +114,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if color is white => symbol , black => background\n",
+    "# another matrix => visited pixels\n",
+    "\n",
+    "#attempt algorithm to find corner \n",
+    "#1.find suspected point as a begining of corner\n",
+    "#2.iterate from the right pixel\n",
+    "#3.if path from this pixel is longer than 4 and dominating direction is Up AND RIGHT and does not form a loop(closed path)\n",
+    "#  then this is a corner=> mark as visited\n",
+    "#4.repeat untill all white pixels are done\n",
+    "\n",
+    "#return path length and top two dominating directions\n",
+    "def checkPathRightUp(y,x,visited,isCorner):\n",
+    "    #if valid path update visited and isCorner list\n",
+    "    w,h=visited.shape\n",
+    "    if(visited[y][x]):\n",
+    "        return\n",
+    "    nextX=x\n",
+    "    nextY=y\n",
+    "    path=[]\n",
+    "    path.append([nextX,nextY])\n",
+    "    count=0\n",
+    "    while(nextX+1 != w and nextY != 0):\n",
+    "        #check right pixel\n",
+    "        if(skeleton[nextY][nextX+1]):\n",
+    "            nextX=nextX+1\n",
+    "            path.append([nextX,nextY])\n",
+    "           # count+=1\n",
+    "        #check right up\n",
+    "        elif(skeleton[nextY-1][nextX+1]):\n",
+    "            nextX=nextX+1\n",
+    "            nextY=nextY-1\n",
+    "            path.append([nextX,nextY])\n",
+    "            count+=1\n",
+    "        #check up\n",
+    "        elif(skeleton[nextY-1][nextX]):\n",
+    "            nextY=nextY-1\n",
+    "            path.append([nextX,nextY])\n",
+    "        #if none exit loop\n",
+    "        else:\n",
+    "            break\n",
+    "    if(len(path)>count and count >=4):\n",
+    "        isCorner.append([x,y])\n",
+    "        for i in path:\n",
+    "            pX=i[0]\n",
+    "            pY=i[1]\n",
+    "            visited[pY][pX]=1\n",
+    "\n",
+    "def findV(skeleton):\n",
+    "    w,h=skeleton.shape\n",
+    "    visited = np.zeros((w,h))\n",
+    "    isCorner=[]\n",
+    "    index=0\n",
+    "    pixelIndices = np.where(skeleton==1)\n",
+    "    pixelCount =len(pixelIndices[0])\n",
+    "    for i in range(pixelCount):\n",
+    "        y = pixelIndices[0][i]\n",
+    "        x = pixelIndices[1][i]\n",
+    "        #check if in white pixel is on borders\n",
+    "        if(x+1 == w or y+1 == h or x== 0 or y==0):\n",
+    "            continue\n",
+    "        upR=skeleton[y-1][x+1]\n",
+    "        up=skeleton[y-1][x]\n",
+    "        right=skeleton[y][x+1]\n",
+    "        upL=skeleton[y-1][x-1]\n",
+    "        if (upR and upL):\n",
+    "            checkPathRightUp(y-1,x+1,visited,isCorner)\n",
+    "        elif (upR and up):\n",
+    "            checkPathRightUp(y-1,x+1,visited,isCorner)\n",
+    "        elif (right and upL):\n",
+    "            checkPathRightUp(y,x+1,visited,isCorner)\n",
+    "        elif (right and upL):\n",
+    "            checkPathRightUp(y,x+1,visited,isCorner)\n",
+    "    return len(isCorner),visited\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'w' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-e8fd99059931>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"skeleton.png\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mskeleton\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mcountVinv\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvInv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfindVinverted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mskeleton\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"potentialCorners.png\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvInv\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-44b3a3b4e36c>\u001b[0m in \u001b[0;36mfindVinverted\u001b[0;34m(skeleton)\u001b[0m\n\u001b[1;32m     74\u001b[0m             \u001b[0mcheckPathRightDown\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvisited\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0misCorner\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mright\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mdownL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m             \u001b[0mcheckPathRightDown\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvisited\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0misCorner\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mright\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mdown\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m             \u001b[0mcheckPathRightDown\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvisited\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0misCorner\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-44b3a3b4e36c>\u001b[0m in \u001b[0;36mcheckPathRightDown\u001b[0;34m(y, x, visited, isCorner)\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mpath\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnextX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnextY\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m     \u001b[0;32mwhile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnextX\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mnextY\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m         \u001b[0;31m#check right pixel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mskeleton\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnextY\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnextX\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'w' is not defined"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2 0\n"
      ]
     }
    ],
    "source": [
-    "img = cv2.imread(\"11.png\")\n",
+    "img = cv2.imread(\"4.png\")\n",
     "gray = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY) \n",
     "\n",
     "#naive binarization\n",
     "\n",
-    "gray =np.where(gray<200,0,255)\n",
+    "gray =np.where(gray<185,0,255)\n",
     "gray=gray/255\n",
     "gray=1-gray\n",
     "\n",
@@ -146,10 +223,19 @@
     "cv2.imwrite(\"skeleton.png\",skeleton*255)\n",
     "\n",
     "countVinv,vInv=findVinverted(skeleton)\n",
+    "countV,v=findV(skeleton)\n",
     "\n",
-    "cv2.imwrite(\"potentialCorners.png\",vInv*255)\n",
-    "print(countVinv)\n"
+    "cv2.imwrite(\"vInv.png\",vInv*255)\n",
+    "cv2.imwrite(\"v.png\",v*255)\n",
+    "print(countVinv,countV)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
