test if image has uneven illumination

--- a/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
+++ b/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#determine if the image needs illumination evening and if it need feng thresholding \n",
+    "#if image has uneven illumination => use poisson\n",
+    "#if image has uneven illumination or a very low contrast(another function) => use feng\n",
+    "#Return True if image is good and false if image is uneven\n",
+    "def imageState(imgGray):\n",
+    "    blurred = cv2.GaussianBlur(imgGray, (25, 25), 0)\n",
+    "    no_text = imgGray * ((imgGray/blurred)>0.99)                \n",
+    "    no_text[no_text<10] = no_text[no_text>20].mean()      \n",
+    "    no_bright = no_text.copy()\n",
+    "    no_bright[no_bright>220] = no_bright[no_bright<220].mean()\n",
+    "    std = no_bright.std()\n",
+    "    bright = (no_text>220).sum()\n",
+    "    if std>18 or (no_text.mean()<200 and bright>8000):\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -391,19 +415,24 @@
       ]
      },
      "metadata": {},
-     "execution_count": 77
+     "execution_count": 168
     }
    ],
    "source": [
-    "img= cv2.imread(\"03.PNG\") \n",
+    "img= cv2.imread(\"02.PNG\") \n",
     "countourImg=np.copy(img)\n",
     "gray_img=cv2.cvtColor(img,cv2.COLOR_BGR2GRAY) \n",
-    "# IlluminatedImage=applyPoison(gray_img,0.1,0.1)\n",
-    "# IlluminatedImage=IlluminatedImage.astype(np.uint8)\n",
-    "#smoothedImage=smooth(gray_img)\n",
-    "# t =threshold_otsu(smoothedImage)\n",
-    "# BinarizedImage=np.where(smoothedImage>t,1,0)\n",
-    "BinarizedImage=feng_threshold(gray_img)\n",
+    "isEven = imageState(gray_img)\n",
+    "IlluminatedImage=gray_img\n",
+    "if(not isEven):\n",
+    "    IlluminatedImage=applyPoison(gray_img,0.1,0.1)\n",
+    "    IlluminatedImage=IlluminatedImage.astype(np.uint8)\n",
+    "smoothedImage=smooth(IlluminatedImage)\n",
+    "if  not isEven:\n",
+    "    BinarizedImage=feng_threshold(smoothedImage)\n",
+    "else:\n",
+    "    t =threshold_otsu(smoothedImage)\n",
+    "    BinarizedImage=np.where(smoothedImage>t,1,0)\n",
     "BinarizedImage=1-BinarizedImage\n",
     "RotatedImage=deskew(BinarizedImage)\n",
     "#correctedPrespective=prespectiveCorrection(RotatedImage)\n",
@@ -413,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,17 +575,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 171,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[4 4 4 4 4] [ 57  89 121 153 184]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#loop in array of images and remove staff from each\n",
     "def removeStaffRow(imgOriginal,midPoint,curWidth):\n",
@@ -573,14 +594,15 @@
     "for simg in imgSegments:\n",
     "    simg=1-simg\n",
     "    maxProjection,result=rowProjection(simg)\n",
-    "    staffWidth,peaksMids=calcStaffPos(result,maxProjection,0.85)\n",
-    "    print(staffWidth,peaksMids)\n",
-    "    # ST=np.ones((1,3))\n",
-    "    # simg=cv2.dilate(simg,ST)\n",
+    "    staffWidth,peaksMids=calcStaffPos(result,maxProjection,0.6)\n",
+    "    simg=simg.astype(np.float)\n",
+    "    ST=np.ones((1,3))\n",
+    "    simg=cv2.dilate(simg,ST)\n",
+    "\n",
     "    for i in range(len(peaksMids)):\n",
     "        simg=removeStaffRow(simg,peaksMids[i],staffWidth[i])\n",
-    "    # ST=np.ones((2,1))\n",
-    "    # simg=cv2.dilate(simg,ST)\n",
+    "    ST=np.ones((2,1))\n",
+    "    simg=cv2.dilate(simg,ST)\n",
     "    simg=1-simg\n",
     "    imgsStaffRemoved.append(simg)\n",
     "\n",
@@ -590,6 +612,23 @@
     "    cv2.imwrite(\"staffRemoved/\"+str(imgindex)+\".png\",i*255)\n",
     "    imgindex+=1\n",
     "#return array of images without staff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(isEven)"
    ]
   },
   {
