feature function skeleton

--- a/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
+++ b/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
@@ -743,7 +743,7 @@
     "            checkPathRightDown(y,x+1,y+1,x-1,visited,isCorner)\n",
     "        elif (right and down):\n",
     "            checkPathRightDown(y,x+1,y+1,x,visited,isCorner)\n",
-    "    return len(isCorner),visited\n",
+    "    return len(isCorner)\n",
     "\n",
     "\n",
     "# if color is white => symbol , black => background\n",
@@ -835,7 +835,7 @@
     "            checkPathRightUp(y,x+1,y-1,x,visited,isCorner)\n",
     "        elif (right and upL):\n",
     "            checkPathRightUp(y,x+1,y-1,x-1,visited,isCorner)\n",
-    "    return len(isCorner),visited\n",
+    "    return len(isCorner)\n",
     "\n"
    ]
   },
@@ -883,20 +883,24 @@
    "source": [
     "def extractFeatures(img):\n",
     "    features = []\n",
+    "    #no of beams and regions \n",
+    "    #update image to remove beams\n",
     "    #no of blackblobs\n",
     "    #no of white blobs\n",
     "    #blobs direction (right or left of vertical line)\n",
     "    #blobs up or down\n",
     "    #update image to remove blobs\n",
+    "\n",
+    "    #no of up flags=>takes skeleton\n",
+    "    #no of down flags=>takes skeleton\n",
+    "\n",
+    "    #take original image\n",
     "    #no of vertical lines and distance X\n",
-    "    #no of beams and regions\n",
-    "    #no of intersection points =>accidental X\n",
-    "    #no of up flags\n",
-    "    #no of down flags\n",
+    "    #no of intersection points => accidental X\n",
     "\n",
     "    #aspect ratio??\n",
     "    #chain code of blurred skelton??\n",
-    "    \n",
+    "    #no of horizontal lines for ??\n",
     "    return features\n"
    ]
   }
