integrated staffLines Removal

--- a/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
+++ b/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
@@ -405,8 +405,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "0\n",
       "1\n",
@@ -772,14 +772,14 @@
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "True"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "execution_count": 10
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -925,10 +925,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "dim  4403 4913\n883 2367\n1227 2769\n1648 3130\n"
+      "dim  4403 4913\n",
+      "883 2367\n",
+      "1227 2769\n",
+      "1648 3130\n"
      ]
     }
    ],
@@ -1279,9 +1282,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.3 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python38364bitbaseconda8b5c7c58a5074d9d878b205825656f6c"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1293,7 +1296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
