detecting soul key with aspect ratio

--- a/Juptyer/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
+++ b/Juptyer/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,9 +401,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-420-f229fac19a36>:7: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  no_text = imgGray * ((imgGray/blurred)>0.99)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -777,13 +785,13 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 421,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "img= cv2.imread(\"18.jpg\")\n",
+    "img= cv2.imread(\"10.PNG\")\n",
     "countourImg=np.copy(img)\n",
     "gray_img=cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
     "isEven = imageState(gray_img)\n",
@@ -806,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,17 +929,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dim  4403 4913\n",
-      "883 2367\n",
-      "1227 2769\n",
-      "1648 3130\n"
+      "dim  425 873\n",
+      "0 410\n"
      ]
     }
    ],
@@ -964,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,13 +1226,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 428,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image is ready\n"
+     ]
+    }
+   ],
    "source": [
     "#convert image into contours\n",
     "imgindex=0\n",
     "segContours=[]\n",
+    "found = False\n",
     "for seg in imgsStaffRemoved:\n",
     "    contours = find_contours(seg, 0.8)\n",
     "    imgContours=[]\n",
@@ -1243,16 +1258,29 @@
     "    for Xmin,Xmax,Ymin,Ymax in imgContours:\n",
     "        imgSymbol=seg[int(Ymin):int(Ymax+1),int(Xmin):int(Xmax+1)]\n",
     "        imgSymbols.append(imgSymbol)\n",
+    "\n",
+    "        if(found == False):\n",
+    "            soulKeySearching = ((Ymax - Ymin) / (Xmax - Xmin))\n",
+    "        \n",
+    "            if (soulKeySearching > 2.5 and soulKeySearching < 2.9):\n",
+    "                soulKeyDist = Xmin\n",
+    "                found = True\n",
+    "            \n",
     "        cv2.imwrite(\"contours/\"+str(imgindex)+\"_\"+str(index)+\".png\",imgSymbol*255)\n",
     "        index+=1\n",
     "\n",
     "    imgindex+=1\n",
-    "    segContours.append(imgSymbols)"
+    "    segContours.append(imgSymbols)\n",
+    "    \n",
+    "if (soulKeyDist > 250):\n",
+    "    print(\"rotate image\")\n",
+    "else:\n",
+    "    print(\"image is ready\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [],
    "source": [
